--- a/history.html
+++ b/history.html
@@ -104,7 +104,7 @@
                         return;
                     }
 
-                    const response = await axios.get('http://127.0.0.1:5000/history', {
+                    const response = await axios.get('https://libprojback.onrender.com/history', {
                         headers: {
                             'x-access-token': adminToken
                         }
