--- a/history.html
+++ b/history.html
@@ -100,7 +100,7 @@
                     const adminToken = localStorage.getItem('adminToken');
                     if (!adminToken) {
                         alert('Unauthorized access! Please log in as an admin.');
-                        window.location.href = '/index.html';  // Redirect to login login page if not an admin
+                        window.location.href = 'https://maximchik303.github.io/LibProjFront/index.html';  // Redirect to login login page if not an admin
                         return;
                     }
 
