--- a/account.html
+++ b/account.html
@@ -184,7 +184,7 @@
 
         function logout() {
             localStorage.removeItem('token');
-            window.location.href = '/index.html'; // Redirect to login page
+            window.location.href = 'https://maximchik303.github.io/LibProjFront/index.html'; // Redirect to login page
         }
 
         // Initial fetch on page load
