--- a/admin.html
+++ b/admin.html
@@ -330,7 +330,7 @@
         function logout() {
             localStorage.removeItem('token');
             alert('Logged out successfully!');
-            window.location.href = 'index.html';
+            window.location.href = 'https://maximchik303.github.io/LibProjFront/index.html';
         }
 
         window.onload = function() {
@@ -341,7 +341,7 @@
         };
 
         function history(){
-            window.location.href = '/history.html';
+            window.location.href = 'https://maximchik303.github.io/LibProjFront/history.html';
         }
     </script>
 </head>
