--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                 const token = response.data.token;
                 localStorage.setItem('token', token);
                 if (name === 'admin') {
-                    window.location.href = '/admin.html'; // Redirect admin to admin.html
+                    window.location.href = 'https://maximchik303.github.io/LibProjFront/admin.html'; // Redirect admin to admin.html
                 } else {
-                    window.location.href = '/account.html'; // Redirect others to account.html
+                    window.location.href = 'https://maximchik303.github.io/LibProjFront/account.html'; // Redirect others to account.html
                 }
             })
             .catch(error => {
