--- a/admin.html
+++ b/admin.html
@@ -341,6 +341,8 @@
         };
 
         function history(){
+            const token = localStorage.getItem('token');
+            localStorage.setItem('adminToken', token);
             window.location.href = 'https://maximchik303.github.io/LibProjFront/history.html';
         }
     </script>
